--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -31,6 +31,7 @@ security:
       form_login:
         login_path: fos_user_security_login
         check_path: fos_user_security_check
+        default_target_path: home
       logout:
         path:   fos_user_security_logout
         target: fos_user_security_login
@@ -38,6 +39,6 @@ security:
         secret: "%secret%"
 
   access_control:
-    - { path: ^/(message|files|agenda)/, roles: ROLE_MEMBRE }
+    - { path: ^/(files|agenda)/, roles: ROLE_MEMBRE }
     - { path: ^/platform/accept/, roles: ROLE_MEMBRE }
     - { path: ^/user/, roles: ROLE_ADMIN }
